--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@
   border: 1px solid rgba(255, 255, 255, 0.127);
   background-color: black;
   display: none;
+  border-radius: 18px;
+  box-shadow: 0 0 30px 5px rgba(255, 255, 255, 0.0470588235);
 }
 @media (max-width: 991px) {
   .section-game {
